--- a/Space-Invaders-Game/style.css
+++ b/Space-Invaders-Game/style.css
@@ -1,3 +1,19 @@
 body{
     margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+p{
+    position: absolute; 
+    z-index: 10; 
+    color: white; 
+    left: 10px; 
+    top: 10px; 
+    margin: 0; 
+    font-family: sans-serif; 
+    font-size: 30px;
+}
+#main{
+    position: relative;
 }
